Fix potential memory issue by using Files.readString instead of readAllBytes